--- a/docs/overrides/partials/comments.html
+++ b/docs/overrides/partials/comments.html
@@ -1,17 +1,17 @@
 {% if page.meta.comments %}
   <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
   <script src="https://giscus.app/client.js"
-  data-repo="TechxArtisanStudio/Openterface_jp"
-  data-repo-id="R_kgDOLy6dAQ"
+  data-repo="TechxArtisanStudio/Openterface_es"
+  data-repo-id="R_kgDOL76vsQ"
   data-category="Announcements"
-  data-category-id="DIC_kwDOLy6dAc4CfX2n"
+  data-category-id="DIC_kwDOL76vsc4CfYTt"
   data-mapping="pathname"
   data-strict="0"
   data-reactions-enabled="1"
   data-emit-metadata="0"
   data-input-position="bottom"
-  data-theme="light"
-  data-lang="ja"
+  data-theme="preferred_color_scheme"
+  data-lang="es"
   crossorigin="anonymous"
   async>
 </script>
